Overflow fix

--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -31,7 +31,7 @@ h2.subtitle2, h2.subtitle2 a {
 body {
   font-family: Circular;
   margin: 0;
-  overflow-x: hidden
+  overflow: hidden
 }
   * {
     box-sizing: border-box;
